# kernels

./: CMakeLists.txt  Doxyfile.in  Makefile  README  README.md  mainpage.dox
data/: beautiful_data.txt  dummy_data.txt  hack_data.txt  hack_data_labels.txt  unittest_dataset1.txt  unittest_dataset2.txt
examples/: CMakeLists.txt  Makefile  main.cxx
include/: Trie.h
python/: digits_example.py  kernel_test.py  mismatch_string_kernel.py  trie.py  utils.py  wrappers.py
src/: Trie.cxx
test/: CMakeLists.txt  Makefile  test.cxx
